--- a/app/views/friends/index.html.erb
+++ b/app/views/friends/index.html.erb
@@ -1,3 +1,4 @@
+<font color="green">
 <h1>Listing friends</h1>
 <h1 align="right">welcome to my slambook......</h1>
 <table>
@@ -27,5 +28,5 @@
 </table>
 
 <br />
-
+</font>
 <%= link_to 'New Friend', new_friend_path %>
