--- a/app/views/friends/index.html.erb
+++ b/app/views/friends/index.html.erb
@@ -1,13 +1,13 @@
 <font color="green">
 <h1>Listing friends</h1>
 <h1 align="right">welcome to my slambook......</h1>
-<table>
+<table border="1">
   <tr>
-    <th>Name...</th>
-    <th>Cell...</th>
-    <th>Email...</th>
-    <th>Dob..</th>
-    <th>Aboutme  </th>
+    <th>Name  </th>
+    <th>Cell  </th>
+    <th>Email  </th>
+    <th>Dob   </th>
+    <th>Aboutme   </th>
     <th></th>
     <th></th>
     <th></th>
