--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -3,7 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 body
 {
-background-image:url('wall3.jpg');
+background-image:url('3.jpg');
 height:800px;
 width:1000px;
 }
