--- a/app/views/friends/index.html.erb
+++ b/app/views/friends/index.html.erb
@@ -29,4 +29,13 @@
 
 <br />
 </font>
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=186165954844565";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+<div class="fb-like" data-href="http://slam-book.heroku.com/" data-send="true" data-width="450" data-show-faces="true"></div>
 <%= link_to 'New Friend', new_friend_path %>
