--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,4 +11,11 @@
  *= require_self
  *= require_tree .
 */
+p.margin
+{
+margin-top:100px;
+margin-bottom:100px;
+margin-right:50px;
+margin-left:50px;
+}
 
