--- a/app/views/friends/index.html.erb
+++ b/app/views/friends/index.html.erb
@@ -1,7 +1,8 @@
-<font color="green">
+<font color="white">
 <h1>Listing friends</h1>
 <h1 align="right">welcome to my slambook......</h1>
-<table border="1">
+<table border="5" width="100%" bordercolor="red">
+  <col width="30" />
   <tr>
     <th>Name  </th>
     <th>Cell  </th>
@@ -15,7 +16,7 @@
 
 <% @friends.each do |friend| %>
   <tr>
-    <td><%= friend.name %></td>
+    <td><%= friend.name %> </td>
     <td><%= friend.cell %></td>
     <td><%= friend.email %></td>
     <td><%= friend.DOB %></td>
@@ -26,9 +27,9 @@
   </tr>
 <% end %>
 </table>
-
-<br />
 </font>
+<br />
+
 <div id="fb-root"></div>
 <script>(function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
