--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -10,7 +10,7 @@ p
 {
 color:white;
 font-size:30px;
-text-align:center;
+text-align:left;
 }
 h1
 {
@@ -19,4 +19,5 @@ color:#660033;
 #user_nav
 {
 font-size:30px;
+color:brown;
 }
