--- a/app/views/friends/new.html.erb
+++ b/app/views/friends/new.html.erb
@@ -23,6 +23,6 @@
 
 <font color="green">
 <%= render 'form' %>
-
-<%= link_to 'Back', friends_path %>
+<div id="notice">
+<%= link_to 'Back', friends_path %></div>
 </font>
