--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -23,8 +23,7 @@
     <%= f.label :password_confirmation %><br />
     <%= f.password_field :password_confirmation %>
   </p>
-<p>
-  <p class="button"><%= f.submit :sign_up %></p>
+  <p class="button1"><%= f.submit :sign_up %>
 </p>
 <% end %>
 
