--- a/app/views/friends/index.html.erb
+++ b/app/views/friends/index.html.erb
@@ -2,7 +2,7 @@
 <h1>Listing friends</h1>
 <h1 align="right">welcome to my slambook......</h1>
 <table border="1" width="100%" bordercolor="red">
-  <col width="30" />
+  <col width="auto" />
   <tr>
     <th>Name  </th>
     <th>Cell  </th>
